# oscar-medical-guidelines-scraper

./: .env.example  .gitignore  Makefile  PLAN.md  README.md  SETUP.md  WALKTHROUGH.md  commands.txt  docker-compose.yml  pyproject.toml
backend/app/: config.py  db.py  init_db.py  main.py  models.py  schemas.py
backend/pipeline/: discover.py  download.py  extract.py  scraper.py  select_initial.py  structure.py
backend/tests/: test_idempotent_structure.py  test_schema.py  test_select_initial.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: PolicyDetail.jsx  RuleTree.jsx
